fixed burger menu on mobile devices

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,17 +13,19 @@ $link: #E29578;
     i { color: var(--color-white); }
 }
 
-.mycit{
-  background-image: url("../img/cit.jpg");
-  background-repeat: no-repeat;
-  background-size:cover;
-}
-
 .mybackground{
     background-image: url("../img/home-bg.svg");
     background-repeat: no-repeat;
     background-size:cover;
 
+}
+
+#nav-toggle-state {
+  display: none;
+}
+
+#nav-toggle-state:checked ~ .nav-menu {
+  display: block;
 }
 
 @media(max-width: 767px) { /* <== You can change this break point as per your  needs */
